-Fonts in textareas are now fixed-width (monospace)
-Looked further into scrolling on Android browsers
	-Tried RichTextAreas, HTML panels (subclass of Label), wrapping RichTextArea within HtmlPanel and ScrollPanel (as used in revision 220).  Still unable to get scrolling working within Android browsers without reverting to the double scrollbar issue.  Recommend setting aside until bug is fixed within Android browsers.

--- a/client/war/WE.css
+++ b/client/war/WE.css
@@ -9,7 +9,10 @@ h1 {
 }
 
 textarea {
+	font-family: monospace;
+	padding: 0px;
 	resize: none;
+	overflow: auto;
 }
 
 /** Most GWT widgets already have a style name defined */
